--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/chatroom
-spring.datasource.username=root
-spring.datasource.password=12341234
+spring.datasource.url=jdbc:mysql://labs.fpv.umb.sk/chatroom
+spring.datasource.username=pkukushkin
+spring.datasource.password=pasha2002Rusik3
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
